--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,4 +9,7 @@ spring:
     hibernate:
       ddl-auto: update
 
-
+  logging:
+    level:
+      # Set the default logging level for your specific package to DEBUG
+      com.practice.crud_demo: DEBUG
